# FastAPI_Dunossauro

./: .env_sample  .gitignore  README.md  pyproject.toml
fastapi_dunossauro/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fastapi_dunossauro/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: b48def99b5a5_exercício_para_incluir_o_updated_at.py  e223ce9abd69_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
