[project]
name = "fastapi-dunossauro"
version = "0.1.0"
description = ""
authors = [
    {name = "Rodrigo Alves Tenório",email = "rodten23@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi[standard] (>=0.120.0,<0.121.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
